[package]
name = "dig-network-block"
version = "0.1.0"
edition = "2024"
description = "Primitives for DIG L2 block structure: header/body types, roots, and consensus emissions."
license = "MIT OR Apache-2.0"
keywords = ["dig", "l2", "block", "crypto", "chia"]
categories = ["cryptography", "data-structures"]
documentation = "https://docs.rs/dig-network-block"
repository = ""

[lib]
name = "dig_network_block"
path = "src/lib.rs"

[dependencies]

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "1"

# Hex encode/decode utilities
hex = "0.4"

# Hashing
sha2 = "0.10"
